# attio-mcp

./: .env.example  README.md  pyproject.toml
src/: client.py  main.py  server.py
src/attio/: config.py  request.py  types.py
src/tools/: __init__.py  attributes.py  comments.py  companies.py  deals.py  lists.py  people.py
